Fix extension height
Maximize extension height to hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html, body {
   width: 400px;
-  height: 550px;
+  height: 600px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
